mengubah route fetch reservaton dan swaggernya
